--- a/MusicPlayer/Spotify/Pages/AlbumPage.razor.css
+++ b/MusicPlayer/Spotify/Pages/AlbumPage.razor.css
@@ -2,6 +2,16 @@
     outline: none;
 }
 
+.main-area {
+    display: flex;
+    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 100%;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
 .page-wrapper {
     display: flex;
     flex-direction: column;
@@ -9,8 +19,20 @@
     box-sizing: border-box;
     min-width: 40%;
     width: 100%;
-    border-radius: 10px;
+    height: fit-content;
 }
+
+.album-info-container {
+    position: relative;
+}
+
+    .album-info-container .background {
+        position: absolute;
+        background-color: #1a1a1a;
+        height: 100%;
+        width: 100%;
+        background-clip: border-box;
+    }
 
 .album-info-area {
     display: flex;
@@ -21,8 +43,9 @@
     max-height: 400px;
     min-height: 340px;
     border-radius: 10px 10px 0 0;
-    background-color: #1a1a1a;
+    /*background-color: #1a1a1a;*/
     box-sizing: border-box;
+    position: relative;
 }
 
 .album-info {
@@ -274,4 +297,24 @@
 .track-list {
     padding: 0 24px;
     min-width: 450px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: var(--var1);
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #898889;
+        transition: 0.5s;
+    }
+
+@property --var1 {
+    syntax: "<color>";
+    inherits: true;
+    initial-value: transparent;
 }
