--- a/MusicPlayer/Spotify/Pages/PlaylistPage.razor
+++ b/MusicPlayer/Spotify/Pages/PlaylistPage.razor
@@ -1,80 +1,6 @@
 ﻿@page "/playlist/{Id:guid}"
-@using Spotify.Data.Images
-
-<div class="page-wrapper">
-    <div class="playlist-info-area">
-        <div class="playlist-cover">
-            @if (!String.IsNullOrEmpty(Playlist?.Image))
-            {
-                <img src="data:image/png;base64,@Playlist.Image" />
-            }
-            else
-            {
-                <img src="data:image/png;base64,@PlaylistImages.DefaultImage" />
-            }
-        </div>
-        <div class="playlist-info">
-            <div class="playlist-type">
-                <span>Playlist</span>
-            </div>
-            <div class="playlist-name-area">
-                <h1 class="playlist-name">@Playlist?.Title</h1>
-            </div>
-            <div class="playlist-authors">
-                @Playlist?.User.Name
-            </div>
-            <div class="playlist-duration">
-                <div class="spotify-logo">
-                    <i class="ph-fill ph-spotify-logo"></i>
-                    <a href="#">Spotify</a>
-                </div>
-                <span class="dot-separator">•</span>
-                <span class="songs-count">
-                    x songs,
-                    <span class="songs-duration">about x hr</span>
-                </span>
-            </div>
-        </div>
-    </div>
-    <div class="controls">
-        <div class="controls-left">
-            <button class="play-button">
-                <i class="ph-fill ph-play-circle"></i>
-            </button>
-            <button class="like-button">
-                <i class="ph ph-heart-straight"></i>
-            </button>
-            <button class="options-button">
-                <i class="ph-fill ph-dots-three-outline"></i>
-            </button>
-        </div>
-        <div class="controls-right">
-            <button class="display-mode-button">
-                <span>List</span>
-                <i class="ph-fill ph-list-dashes"></i>
-            </button>
-        </div>
-    </div>
-    <div class="track-list-header">
-        <div class="track-info">
-            <div class="track-number">#</div>
-            <div class="track-title">Title</div>
-            <div class="track-album">Album</div>
-            <div class="track-duration">
-                <i class="ph ph-clock"></i>
-            </div>
-        </div>
-    </div>
-    <div class="track-list">
-        @if (Tracks is not null)
-        {
-            @foreach (var track in Tracks)
-            {
-                <TrackRow Index="songNumber" Id=@track.Id></TrackRow>
-                songNumber++;
-            }
-        }
-    </div>
+<div class="main-area">
+    <TrackList TrackCollection="Playlist"></TrackList>
 </div>
 
 @code {
@@ -83,28 +9,13 @@
 
     public PlaylistModel? Playlist { get; set; }
 
-    public List<TrackModel>? Tracks { get; set; }
-
     int songNumber = 1;
 
     protected override void OnInitialized()
     {
         using (var db = new PlayerContext())
         {
-            Playlist = db.Playlists
-                        .Include(p => p.User)
-                        .Include(p => p.PlaylistTrack)
-                            .ThenInclude(pt => pt.Track)
-                        .FirstOrDefault(p => p.Id == Id);
-
-            if (Playlist is not null)
-            {
-                Tracks = (from t in db.Tracks
-                          from pt in db.PlaylistTracks
-                          where t.Id == pt.TrackId
-                          where pt.PlaylistId == Playlist.Id
-                          select t).ToList();
-            }
+            Playlist = db.Playlists.FirstOrDefault(p => p.Id == Id);
         }
     }
 }
