justify-content changed to space-around

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
@@ -65,8 +65,6 @@
         display: none;
     }
 
-
-
 .album-cover-info {
     display: flex;
     min-width: 145px;
@@ -84,7 +82,7 @@
 .album-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     max-width: fit-content;
     min-width: 90px;
     transition: 0.5s;
