--- a/MusicPlayer/Spotify/Shared/MainLayout.razor.css
+++ b/MusicPlayer/Spotify/Shared/MainLayout.razor.css
@@ -41,14 +41,19 @@
 .favorites-area, .main-area {
     transition: --var1 0.5s;
     transition-delay: 1s;
-    overflow-y: scroll;
-    overflow-x: hidden;
+/*    overflow-y: scroll;
+    overflow-x: hidden;*/
 }
 
     .favorites-area:hover, .main-area:hover {
         --var1: #4f4f4f;
         transition-delay: 0s;
     }
+
+.favorites-area {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 
 .sidebar-area {
     display: flex;
@@ -72,6 +77,7 @@
 
 .main-area {
     flex: 1;
+    position: relative;
 }
 
 ::-webkit-scrollbar {
@@ -101,7 +107,6 @@
         background: #898889;
         transition: 0.5s;
     }
-
 
 @property --var1 {
     syntax: "<color>";
