--- a/MusicPlayer/Spotify/Shared/Topbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Topbar.razor.css
@@ -1,13 +1,14 @@
 ﻿.header {
-    position: sticky;
-    top: 0;
-    height: 32px;
+    position: absolute;
+    height: 64px;
+    width: 100%;
     padding: 16px;
     display: flex;
     justify-content: space-between;
     z-index: 1;
     background-color: transparent;
     font-family: DmSans, sans-serif;
+    box-sizing: border-box;
 }
 
 .button {
@@ -36,7 +37,7 @@
     gap: 8px;
 }
 
-    
+
 .back-icon, .forward-icon, .notify-icon, .profile-icon {
     min-width: 32px;
     max-width: 32px;
@@ -57,9 +58,9 @@
     color: #a1a0a9;
 }
 
-.notify-icon:hover {
-    color: #fff;
-}
+    .notify-icon:hover {
+        color: #fff;
+    }
 
 .download-icon {
     width: fit-content;
@@ -78,4 +79,3 @@
     .download-icon:hover {
         transform: scale(1.03)
     }
-
