--- a/MusicPlayer/Spotify/Pages/Items/TrackList.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackList.razor
@@ -108,7 +108,7 @@
         InitializeTrackList();
     }
 
-    protected override async Task OnParametersSetAsync()
+    protected override void OnParametersSet()
     {
         InitializeTrackList();
     }
