--- a/MusicPlayer/Spotify/Pages/PlaylistPage.razor
+++ b/MusicPlayer/Spotify/Pages/PlaylistPage.razor
@@ -14,7 +14,7 @@
         InitializePlaylist();
     }
 
-    protected override async Task OnParametersSetAsync()
+    protected override void OnParametersSet()
     {
         InitializePlaylist();
     }
