--- a/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor.css
@@ -19,13 +19,12 @@
     max-height: 50px;
     max-width: 50px;
     box-shadow: #181818 0px 10px 15px;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: 0.2s;
 }
 
     .image-area img {
         width: 100%;
-        border-radius: 10px;
         transform: scale(1);
         transition: 0.2s;
         box-shadow: #181818 0px 10px 15px;
@@ -41,7 +40,8 @@
         line-height: 22px;
         margin: 0;
         padding: 0;
-        font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
+        font-family: DmSans, sans-serif;
+        font-weight: 400;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
