link to spotidy in playlist added

--- a/MusicPlayer/Spotify/Pages/Items/TrackList.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackList.razor
@@ -43,7 +43,7 @@
                 <div class="duration">
                     <div class="spotify-logo">
                         <i class="ph-fill ph-spotify-logo"></i>
-                        <a href="#">Spotify</a>
+                        <a href="https://open.spotify.com/user/spotify" target="_blank">Spotify</a>
                     </div>
                     <span class="dot-separator">•</span>
                     @if (TrackCount == 1)
