side playlist changes

--- a/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor
+++ b/MusicPlayer/Spotify/Pages/Items/SidePlaylist.razor
@@ -17,7 +17,7 @@
             <p class="title">@Playlist?.Title</p>
         </div>
         <div class="author-area">
-            <i class="ph-fill ph-push-pin"></i>
+            <i class="ph-fill ph-push-pin pin-icon"></i>
             @if (!String.IsNullOrEmpty(UserName))
             {
                 <p class="author">@UserName</p>
