track row hover changes

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -34,7 +34,7 @@
             @Track?.DurationTime
         </div>
         <div class="options">
-            <i class="ph ph-dots-three"></i>
+            <i class="ph-bold ph-dots-three"></i>
         </div>
     </div>
 </div>
