--- a/MusicPlayer/Spotify/Shared/Menu.razor.css
+++ b/MusicPlayer/Spotify/Shared/Menu.razor.css
@@ -6,6 +6,7 @@
     height: 50px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
     .menu-item:hover p, .menu-item:hover i {
