--- a/MusicPlayer/Spotify/Pages/AlbumPage.razor
+++ b/MusicPlayer/Spotify/Pages/AlbumPage.razor
@@ -2,6 +2,7 @@
 
 <div class="main-area">
     <TrackList TrackCollection="Album"></TrackList>
+    <ReleasePublisher ReleaseDate="@Album.ReleaseDate"></ReleasePublisher>
 </div>
 
 
