--- a/MusicPlayer/Spotify/Pages/AlbumPage.razor.css
+++ b/MusicPlayer/Spotify/Pages/AlbumPage.razor.css
@@ -4,6 +4,7 @@
 
 .main-area {
     display: flex;
+    flex-direction:column;
     overflow: hidden;
     overflow-y: scroll;
     overflow-x: hidden;
