--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
@@ -63,9 +63,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: end;
     margin-right: 8px;
     margin-left: 8px;
-    align-items: center;
     color: #B3B3B3;
 }
 
