--- a/MusicPlayer/Spotify/Pages/Items/ReleasePublisher.razor
+++ b/MusicPlayer/Spotify/Pages/Items/ReleasePublisher.razor
@@ -1,6 +1,6 @@
 ﻿<div class="release-publisher-area">
     <div class="release">
-        @ReleaseDate.Value.ToString("MMMM dd, yyyy", CultureInfo.CreateSpecificCulture("en-US"))
+        @ReleaseDate.Value.ToString("MMMM d, yyyy", CultureInfo.CreateSpecificCulture("en-US"))
     </div>
     <div class="publisher">
         ℗ @ReleaseDate.Value.ToString("yyyy") Roswell Records, Inc.
