--- a/MusicPlayer/Spotify/Shared/Trackbar.razor.css
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor.css
@@ -86,6 +86,7 @@ a {
     max-width: 20rem;
     position: relative;
     overflow: hidden;
+    gap: 3px;
 }
 
     .track-area .track-info::after {
@@ -301,7 +302,6 @@ a {
     pointer-events: none;
 }
 
-
 .volume-slider-area:hover .inner, .volume-slider-area:hover .circle {
     background-color: #1e9ed7;
 }
@@ -311,8 +311,6 @@ a {
     background-color: #fff;
     pointer-events: none;
 }
-
-
 
 .other-area .button {
     color: #9e9d9e;
@@ -330,4 +328,12 @@ a {
 
     .other-area .button:hover {
         color: #fff;
+    }
+
+.inactive {
+    color: #9e9d9e !important;
+}
+
+    .inactive:hover {
+        color: #9e9d9e;
     }
