--- a/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor.css
@@ -5,11 +5,10 @@
 
 .card {
     position: relative;
-    margin: 15px;
     padding: 16px;
     max-width: 250px;
-    min-width: 150px;
-    flex: 1 1 200px;
+    min-width: 125px;
+    flex: 1 1 125px;
     background: #151515;
     border-radius: 10px;
     transition: 0.3s;
@@ -93,6 +92,10 @@
         margin: auto;
     }
 
+.title-area {
+    overflow: hidden;
+}
+
 .title {
     color: #FFFFFF;
     /*font-size: 18px;*/
@@ -101,6 +104,9 @@
     font-weight: 700;
     margin-bottom: 4px;
     z-index: 1;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
 }
 
 .author-area {
@@ -111,6 +117,12 @@
     z-index: 1;
     min-height: 0;
     overflow: hidden;
+}
+
+.author {
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
 }
 
 .author:hover {
