album page minor changes

--- a/MusicPlayer/Spotify/Pages/AlbumPage.razor
+++ b/MusicPlayer/Spotify/Pages/AlbumPage.razor
@@ -3,7 +3,7 @@
 <div class="main-area">
     <TrackList TrackCollection="Album"></TrackList>
     <ReleasePublisher ReleaseDate="@Album?.ReleaseDate"></ReleasePublisher>
-    <AuthorAlbums AlbumId="@Album?.Id"></AuthorAlbums>
+    <ArtistAlbums AlbumId="@Album?.Id"></ArtistAlbums>
 </div>
 
 
