ArtistAlbum OnInitializedAsync changed on OnInitialized

--- a/MusicPlayer/Spotify/Pages/Items/ArtistAlbums.razor
+++ b/MusicPlayer/Spotify/Pages/Items/ArtistAlbums.razor
@@ -40,7 +40,7 @@
         }
     }
 
-    protected override async Task OnParametersSetAsync()
+    protected override void OnParametersSet()
     {
         InitializeAlbums();
     }
