--- a/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor
@@ -13,7 +13,7 @@
             {
                 <img src="data:image/png;base64,@AlbumCovers.DefaultCover" />
             }
-            else if (TrackCollection is PlaylistModel)
+            else
             {
                 <img src="data:image/png;base64,@PlaylistImages.DefaultImage" />
             }
